Nit: Replace cp and rm with mv

--- a/docs/getting-started/setup.mdx
+++ b/docs/getting-started/setup.mdx
@@ -25,7 +25,7 @@ If you're familiar with [Docker Compose](https://docs.docker.com/compose/) or pl
    ```bash Mac/Linux
    git clone https://github.com/mage-ai/compose-quickstart.git mage-quickstart \
    && cd mage-quickstart \
-   && cp dev.env .env && rm dev.env \
+   && mv dev.env .env \
    && docker compose up
    ```
 
